[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed-stream"
version = "0.1.0"
description = "Download PubMed Central full-text articles from the command line or Python code."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "pubmed-stream contributors" }]
keywords = ["pubmed", "pmc", "ncbi", "literature", "download"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
pubmed-stream = "pubmed_stream.cli:main"

[project.urls]
Repository = "https://github.com/huang/pubmed-stream"

[tool.setuptools.packages.find]
include = ["pubmed_stream*"]
