[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed-stream"
version = "0.1.0"
description = "Download PubMed Central full-text articles via NCBI E-utilities API. Built for biomedical research."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "Haran Lab, Bucci Lab, and Microbiology & Microbiome Dynamics AI HUB" }
]
maintainers = [
    { name = "University of Massachusetts" }
]
keywords = ["pubmed", "pmc", "ncbi", "e-utilities", "literature", "download", "biomedical", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
pubmed-stream = "pubmed_stream.cli:main"

[project.urls]
Repository = "https://github.com/melhzy/pubmed-stream"
Homepage = "https://github.com/melhzy/pubmed-stream"
"Bug Tracker" = "https://github.com/melhzy/pubmed-stream/issues"

[tool.setuptools.packages.find]
include = ["pubmed_stream*"]
